syntax = "proto3";

package dni;

message ThresholdTaskOptions {
    message ThreshScore {
        double threshold = 1;
        double score = 2;
    }

    repeated ThreshScore thresh_scores = 1;
}
